--- a/index.html
+++ b/index.html
@@ -1909,7 +1909,9 @@ Kratom Tea — это насыщенный травяной напиток с г
 ],
 
 "Семена конопли": {
+
     "Автоцветущие": [
+
         {
             name: "Orange Creampop Auto",
             price: 2500,
@@ -1923,15 +1925,96 @@ Kratom Tea — это насыщенный травяной напиток с г
 
 Коллекционная генетическая линия с ярким цитрусовым профилем.
 
-🧬 Тип: Автоцветущий  
+🌱 Тип: Автоцветущий  
 📦 Упаковка: 3 семени  
 
 Предназначено для коллекционных целей.
+`
+        },
+
+        {
+            name: "Gelato Auto",
+            price: 2400,
+            images: [
+                "/rose_seeds/auto/auto_2_1.jpg",
+                "/rose_seeds/auto/auto_2_2.jpg",
+                "/rose_seeds/auto/auto_2_3.jpg"
+            ],
+            description: `
+<strong>Gelato Auto</strong>
+
+Сбалансированная коллекционная линия с кремово-десертным ароматом.
+
+🌱 Тип: Автоцветущий  
+📦 Упаковка: 3 семени  
+
+Подходит для коллекционирования.
+`
+        },
+
+        {
+            name: "Wedding Cake Auto",
+            price: 2600,
+            images: [
+                "/rose_seeds/auto/auto_3_1.jpg",
+                "/rose_seeds/auto/auto_3_2.jpg",
+                "/rose_seeds/auto/auto_3_3.jpg"
+            ],
+            description: `
+<strong>Wedding Cake Auto</strong>
+
+Коллекционный сорт с насыщенным сладким профилем.
+
+🌱 Тип: Автоцветущий  
+📦 Упаковка: 3 семени  
+
+Создан для коллекционных целей.
+`
+        },
+
+        {
+            name: "Gorilla Glue Auto",
+            price: 2550,
+            images: [
+                "/rose_seeds/auto/auto_4_1.jpg",
+                "/rose_seeds/auto/auto_4_2.jpg",
+                "/rose_seeds/auto/auto_4_3.jpg"
+            ],
+            description: `
+<strong>Gorilla Glue Auto</strong>
+
+Мощная коллекционная генетика с плотной структурой.
+
+🌱 Тип: Автоцветущий  
+📦 Упаковка: 3 семени  
+
+Только для коллекции.
+`
+        },
+
+        {
+            name: "Zkittlez Auto",
+            price: 2450,
+            images: [
+                "/rose_seeds/auto/auto_5_1.jpg",
+                "/rose_seeds/auto/auto_5_2.jpg",
+                "/rose_seeds/auto/auto_5_3.jpg"
+            ],
+            description: `
+<strong>Zkittlez Auto</strong>
+
+Коллекционный сорт с фруктовым ароматическим профилем.
+
+🌱 Тип: Автоцветущий  
+📦 Упаковка: 3 семени  
+
+Для коллекционных целей.
 `
         }
     ],
 
     "Фотопериодные": [
+
         {
             name: "Orange Creampop FEM",
             price: 2700,
@@ -1943,12 +2026,92 @@ Kratom Tea — это насыщенный травяной напиток с г
             description: `
 <strong>Orange Creampop FEM</strong>
 
-Феминизированная генетическая линия с высокой стабильностью.
+Феминизированная коллекционная линия с высокой стабильностью.
 
-🧬 Тип: Фотопериодный
-📦 Упаковка: 3 семени
+🌿 Тип: Фотопериодный  
+📦 Упаковка: 3 семени  
 
-Предназначено для коллекционных целей.
+Предназначено для коллекции.
+`
+        },
+
+        {
+            name: "Gelato FEM",
+            price: 2800,
+            images: [
+                "/rose_seeds/photo/photo_2_1.jpg",
+                "/rose_seeds/photo/photo_2_2.jpg",
+                "/rose_seeds/photo/photo_2_3.jpg"
+            ],
+            description: `
+<strong>Gelato FEM</strong>
+
+Коллекционная линия с десертным профилем.
+
+🌿 Тип: Фотопериодный  
+📦 Упаковка: 3 семени  
+
+Для коллекционных целей.
+`
+        },
+
+        {
+            name: "Wedding Cake FEM",
+            price: 2900,
+            images: [
+                "/rose_seeds/photo/photo_3_1.jpg",
+                "/rose_seeds/photo/photo_3_2.jpg",
+                "/rose_seeds/photo/photo_3_3.jpg"
+            ],
+            description: `
+<strong>Wedding Cake FEM</strong>
+
+Стабильная феминизированная генетика для коллекции.
+
+🌿 Тип: Фотопериодный  
+📦 Упаковка: 3 семени  
+
+Создан для коллекционеров.
+`
+        },
+
+        {
+            name: "Gorilla Glue FEM",
+            price: 2850,
+            images: [
+                "/rose_seeds/photo/photo_4_1.jpg",
+                "/rose_seeds/photo/photo_4_2.jpg",
+                "/rose_seeds/photo/photo_4_3.jpg"
+            ],
+            description: `
+<strong>Gorilla Glue FEM</strong>
+
+Коллекционный сорт с высокой стабильностью.
+
+🌿 Тип: Фотопериодный  
+📦 Упаковка: 3 семени  
+
+Для коллекционных целей.
+`
+        },
+
+        {
+            name: "Zkittlez FEM",
+            price: 2750,
+            images: [
+                "/rose_seeds/photo/photo_5_1.jpg",
+                "/rose_seeds/photo/photo_5_2.jpg",
+                "/rose_seeds/photo/photo_5_3.jpg"
+            ],
+            description: `
+<strong>Zkittlez FEM</strong>
+
+Феминизированная линия с фруктовым ароматическим профилем.
+
+🌿 Тип: Фотопериодный  
+📦 Упаковка: 3 семени  
+
+Предназначено для коллекции.
 `
         }   // ← закрываем товар
     ]       // ← закрываем массив "Фотопериодные"
