--- a/index.html
+++ b/index.html
@@ -2313,6 +2313,11 @@ ${
 <div class="price-box">
     ${product.price} <span>₽</span>
 </div>
+<div class="qty-controls">
+    <button onclick="changeQty('${product.name}', ${product.price}, -1)">−</button>
+    <span>${qty}</span>
+    <button onclick="changeQty('${product.name}', ${product.price}, 1)">+</button>
+</div>
 <div class="accordion">
 
     <button class="details-btn" onclick="toggleDescription()">
