--- a/index.html
+++ b/index.html
@@ -1450,6 +1450,87 @@ button {
     background: linear-gradient(135deg, #3b82f6, #2563eb);
     color: white;
 }
+  /* ===== SEED ACTION BLOCK ===== */
+
+.seed-action-block {
+    margin-top: 30px;
+    padding: 20px;
+    background: #1e1e1e;
+    border-radius: 20px;
+}
+
+.seed-pack-title,
+.seed-qty-title {
+    font-size: 14px;
+    margin-bottom: 10px;
+    opacity: 0.7;
+}
+
+.seed-pack-options {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.pack-option {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background: #2a2a2a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.pack-option.active {
+    background: linear-gradient(135deg, #2ecc71, #27ae60);
+}
+
+.seed-qty-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #2a2a2a;
+    border-radius: 14px;
+    padding: 8px 14px;
+    margin-bottom: 20px;
+}
+
+.seed-qty-row button {
+    width: 34px;
+    height: 34px;
+    border-radius: 10px;
+    border: none;
+    background: linear-gradient(135deg, #2ecc71, #27ae60);
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    transition: transform 0.15s ease;
+}
+
+.seed-qty-row button:active {
+    transform: scale(0.9);
+}
+
+.seed-add-btn {
+    width: 100%;
+    height: 48px;
+    border-radius: 14px;
+    border: none;
+    background: linear-gradient(135deg, #2ecc71, #27ae60);
+    color: white;
+    font-weight: 600;
+    font-size: 16px;
+    cursor: pointer;
+    transition: transform 0.15s ease;
+}
+
+.seed-add-btn:active {
+    transform: scale(0.96);
+}
 
 </style>
 </head>
@@ -2114,7 +2195,39 @@ ${
 </div>
     `;
 
-    html += `
+    // ===== ЕСЛИ СЕМЕНА =====
+if (category === "Семена конопли") {
+
+html += `
+<div class="seed-action-block">
+
+    <div class="seed-pack-title">Семян в упаковке</div>
+
+    <div class="seed-pack-options">
+        <div class="pack-option active">3</div>
+    </div>
+
+    <div class="seed-qty-title">Количество упаковок</div>
+
+    <div class="seed-qty-row">
+        <button onclick="changeQty('${product.name}', ${product.price}, -1)">−</button>
+        <span>${qty || 1}</span>
+        <button onclick="changeQty('${product.name}', ${product.price}, 1)">+</button>
+    </div>
+
+    <button class="seed-add-btn"
+        onclick="changeQty('${product.name}', ${product.price}, 1)">
+        Добавить в корзину
+    </button>
+
+</div>
+`;
+
+} else {
+
+// ===== ОБЫЧНЫЕ ТОВАРЫ =====
+
+html += `
 <div class="bottom-bar">
 
     ${qty === 0 ? `
@@ -2129,24 +2242,14 @@ ${
         </button>
 
         <div class="mini-qty">
-
-            <button onclick="changeQty('${product.name}', ${product.price}, -1)">
-                −
-            </button>
-
-            <span>
-                ${qty} шт.
-            </span>
-
-            <button onclick="changeQty('${product.name}', ${product.price}, 1)">
-                +
-            </button>
-
+            <button onclick="changeQty('${product.name}', ${product.price}, -1)">−</button>
+            <span>${qty} шт.</span>
+            <button onclick="changeQty('${product.name}', ${product.price}, 1)">+</button>
         </div>
     `}
-    
 </div>
 `;
+}
 
     html += `</div>`;
 
