--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@ button {
     height: 34px;
     border-radius: 10px;
     border: none;
-    background: linear-gradient(135deg, #2ecc71, #27ae60);
+    background: linear-gradient(135deg, #ff4d6d, #ff1e4d);
     color: white;
     font-size: 18px;
     cursor: pointer;
@@ -1513,19 +1513,6 @@ button {
 
 .seed-qty-row button:active {
     transform: scale(0.9);
-}
-
-.seed-add-btn {
-    width: 100%;
-    height: 48px;
-    border-radius: 14px;
-    border: none;
-    background: linear-gradient(135deg, #2ecc71, #27ae60);
-    color: white;
-    font-weight: 600;
-    font-size: 16px;
-    cursor: pointer;
-    transition: transform 0.15s ease;
 }
 
 .seed-add-btn:active {
@@ -2198,30 +2185,40 @@ ${
     // ===== ЕСЛИ СЕМЕНА =====
 if (category === "Семена конопли") {
 
+const packOptions = [3, 5, 10];
+const selectedPack = 3;
+const qtyValue = getQty(product.name) || 1;
+
 html += `
 <div class="seed-action-block">
 
     <div class="seed-pack-title">Семян в упаковке</div>
 
     <div class="seed-pack-options">
-        <div class="pack-option active">3</div>
+        ${packOptions.map(p => `
+            <div class="pack-option ${p === selectedPack ? "active" : ""}"
+                 onclick="selectPack(${p}, '${product.name}', ${product.price})">
+                ${p}
+            </div>
+        `).join("")}
     </div>
 
     <div class="seed-qty-title">Количество упаковок</div>
 
     <div class="seed-qty-row">
-        <button onclick="changeQty('${product.name}', ${product.price}, -1)">−</button>
-        <span>${qty || 1}</span>
-        <button onclick="changeQty('${product.name}', ${product.price}, 1)">+</button>
+        <button onclick="changeSeedQty('${product.name}', ${product.price}, -1)">−</button>
+        <span id="seedQty">${qtyValue}</span>
+        <button onclick="changeSeedQty('${product.name}', ${product.price}, 1)">+</button>
     </div>
 
-    <button class="seed-add-btn"
-        onclick="changeQty('${product.name}', ${product.price}, 1)">
+    <button class="add-btn"
+        onclick="addSeedToCart('${product.name}', ${product.price})">
         Добавить в корзину
     </button>
 
 </div>
 `;
+}
 
 } else {
 
@@ -2330,6 +2327,68 @@ if (qtyEl) {
     }
 
 } 
+  // ===== SEED LOGIC =====
+
+let currentPack = 3;
+
+function selectPack(pack, name, basePrice) {
+
+    currentPack = pack;
+
+    document.querySelectorAll(".pack-option").forEach(btn => {
+        btn.classList.remove("active");
+    });
+
+    event.target.classList.add("active");
+
+    updateSeedPrice(basePrice);
+}
+
+function updateSeedPrice(basePrice) {
+
+    const priceBox = document.querySelector(".price-box");
+
+    const multiplier = currentPack / 3;
+    const newPrice = Math.round(basePrice * multiplier);
+
+    if (priceBox) {
+        priceBox.innerHTML = newPrice + " <span>₽</span>";
+    }
+}
+
+function changeSeedQty(name, basePrice, delta) {
+
+    const qtyEl = document.getElementById("seedQty");
+    let qty = parseInt(qtyEl.textContent);
+
+    qty += delta;
+    if (qty < 1) qty = 1;
+
+    qtyEl.textContent = qty;
+
+    qtyEl.classList.remove("bump");
+    void qtyEl.offsetWidth;
+    qtyEl.classList.add("bump");
+}
+
+function addSeedToCart(name, basePrice) {
+
+    const qty = parseInt(document.getElementById("seedQty").textContent);
+
+    const multiplier = currentPack / 3;
+    const finalPrice = Math.round(basePrice * multiplier);
+
+    const existing = cart.find(i => i.name === name);
+
+    if (existing) {
+        existing.qty += qty;
+    } else {
+        cart.push({ name, price: finalPrice, qty });
+    }
+
+    localStorage.setItem("cart", JSON.stringify(cart));
+    updateCartBar();
+}
 
 function removeFromCart(name) {
     cart = cart.filter(item => item.name !== name);
